# bs4_parsing

./: .gitignore  README.md  main.py  pyproject.toml
core/: __init__.py  kfc.py  monomax.py  utils.py  ziko.py
